FIxes #2286
Will fix the comment preview box text color not visible

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -296,6 +296,7 @@ a.header-link {
       width: calc(100% - 80px);
       margin: 19px auto 8px;
       border: 2px solid $yellow;
+      color: #0f0f0f;
       p.loading-message {
         opacity: 0.6;
       }
